Fix quote alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -108,9 +108,9 @@ button:focus, a.button:focus {
 blockquote.shortquote {
   font-size: 1.2rem;
   padding: 0.5rem 5rem;
-  border: 0 !important;
+  border: 0;
   font-family: 'Comfortaa', cursive;
-  color: #ff6300 !important;
+  color: #ff6300;
 
   &:before {
     font-size: 6rem;
@@ -120,6 +120,7 @@ blockquote.shortquote {
     float: left;
     margin-right: 1rem;
     margin-top: -2rem;
+    margin-left: -3.5rem;
   }
 
 }
